...
      ),
      body: Column(
        children: [
          const Expanded(
            child: Center(
              child: Text(
                'XO',
                style: TextStyle(
                  color: Colors.white,
                  fontSize: 140,
                  fontWeight: FontWeight.bold,
                  fontFamily: 'PermanentMarker',
                ),
...
            ),
          ),
          Expanded(
            child: Center(
              child: ElevatedButton(
                onPressed: () => goToNextPage(context),
                child: const Text('Start Game'),
                style: ButtonStyle(
                  padding: MaterialStateProperty.all(
                    const EdgeInsets.fromLTRB(32, 8, 32, 8),
                  ),
                ),
              ),
...
