...
        mainAxisSize: MainAxisSize.max,
        mainAxisAlignment: MainAxisAlignment.spaceEvenly,
        children: [
          Column(
            children: [
              const Text(
                'Choose your side',
                style: TextStyle(fontSize: 20),
              ),
              const SizedBox(height: 16),
              GridView.count(
                crossAxisCount: 2,
                shrinkWrap: true,
...
                ],
              ),
            ],
          ),
          ElevatedButton(
            onPressed: () => goToNextPage(context),
            child: const Text('Continue'),
            style: ButtonStyle(
              padding: MaterialStateProperty.all(
                const EdgeInsets.fromLTRB(32, 8, 32, 8),
              ),
            ),
          ),
...
